Set up trusted publishing

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,5 +1,9 @@
 name: Release
 
+permissions:
+  id-token: write
+  contents: write
+
 on:
   schedule:
     - cron: "0 */12 * * *"
@@ -10,10 +14,20 @@ jobs:
     name: lint
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v4
+    - uses: actions/checkout@v5
       with:
         token: ${{ secrets.GITHUB_PAT_FROM_ZEKE }}
         lfs: true
+    - uses: actions/setup-node@v6
+      with:
+        node-version: "lts/*"
+      # At the time of writing, we need to update npm to 11.5.1 or later to
+      # get support for Trusted Publishing via GitHub Actions. In future, once
+      # the image and/or setup-node action give us that out of the box, we can
+      # delete this step (and maybe also stop using setup-node if ubuntu-latest
+      # contains a recent enough npm version).
+    - name: Update npm
+      run: npm install -g npm@latest
     - name: Checkout LFS objects
       run: git lfs checkout
     - name: npm ci
@@ -35,8 +49,6 @@ jobs:
           git commit -m "update metadata"
           git push origin master
         else
-          echo "//registry.npmjs.org/:_authToken=${{ secrets.NPM_TOKEN }}" > ~/.npmrc
-
           # bump the version, commit, and create a tag
           npm version patch -f -m "update all-the-package-repos to %s"
 
